reference to html pages changed to routes

--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -31,7 +31,7 @@
 		</div>
 
 		<div class="form-group">
-			<a href="../website/website-list.html" role="button" class="btn btn-primary form-control">Websites</a>
+			<a href="#/user/:uid/website" role="button" class="btn btn-primary form-control">Websites</a>
 		</div>
 
 		<div class="form-group">
