--- a/public/assignment/views/widget/widget-chooser.view.client.html
+++ b/public/assignment/views/widget/widget-chooser.view.client.html
@@ -3,7 +3,7 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
-			<a href="widget-list.html" class="navbar-text pull-left">
+			<a href="#/user/:uid/website/:wid/page/:pid/widget" class="navbar-text pull-left">
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
 			<a href="#" class="navbar-brand">Choose Widget</a>
@@ -11,7 +11,7 @@
 	</nav>
 
 
-	<div class="row">
+	<!--div class="row">
 		<a href="widget-heading.html" class="navbar-text">Header</a>
 	</div>
 
@@ -49,11 +49,11 @@
 
 	<div class="row">
 		<a href="widget-heading.html" class="navbar-text">Repeater</a>
-	</div>
+	</div-->
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="../user/profile.html">
+			<a class="navbar-text pull-right" href="#/user/:uid">
 				<span class="glyphicon glyphicon-user"></span>
 			</a>
 		</div>
