--- a/public/assignment/views/widget/widget-list.view.client.html
+++ b/public/assignment/views/widget/widget-list.view.client.html
@@ -3,17 +3,17 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
-			<a href="../page/page-list.html" class="navbar-text pull-left">
+			<a href="#/user/:uid/website/:wid/page" class="navbar-text pull-left">
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
 			<a href="#" class="navbar-brand">Widgets</a>
-			<a class="navbar-text pull-right" href="widget-chooser.html">
+			<a class="navbar-text pull-right" href="#/user/:uid/website/:wid/page/:pid/widget/new">
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
 	</nav>
 
-	<div class="row form">
+	<!--div class="row form">
 
 		<h1 class="navbar-text">GIZMODO</h1>
 		<p class="navbar-text pull-right">
@@ -102,13 +102,13 @@
 			</a>
 
 		</p>
-	</div>
+	</div-->
 
 
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="../user/profile.html">
+			<a class="navbar-text pull-right" href="#/user/:uid">
 				<span class="glyphicon glyphicon-user"></span>
 			</a>
 		</div>
