--- a/public/assignment/views/page/page-edit.view.client.html
+++ b/public/assignment/views/page/page-edit.view.client.html
@@ -2,11 +2,11 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
-			<a href="page-list.html" class="navbar-text pull-left">
+			<a href="#/user/:uid/website/:wid/page" class="navbar-text pull-left">
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
 			<a href="#" class="navbar-brand">Edit Page</a>
-			<a class="navbar-text pull-right" href="page-list.html">
+			<a class="navbar-text pull-right" href="#/user/:uid/website/:wid/page">
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
@@ -24,7 +24,7 @@
 		</div>
 
 		<div class="form-group">
-			<a href="page-list.html" role="button" class="btn btn-danger form-control">Delete</a>
+			<a href="#/user/:uid/website/:wid/page" role="button" class="btn btn-danger form-control">Delete</a>
 		</div>
 
 
@@ -33,7 +33,7 @@
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="../user/profile.html">
+			<a class="navbar-text pull-right" href="#/user/:uid">
 				<span class="glyphicon glyphicon-user"></span>
 			</a>
 		</div>
