--- a/public/assignment/views/page/page-list.view.client.html
+++ b/public/assignment/views/page/page-list.view.client.html
@@ -3,11 +3,11 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
-			<a href="../website/website-list.html" class="navbar-text pull-left">
+			<a href="#/user/:uid/website" class="navbar-text pull-left">
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
 			<a href="#" class="navbar-brand">Pages</a>
-			<a class="navbar-text pull-right" href="page-new.html">
+			<a class="navbar-text pull-right" href="#/user/:uid/website/:wid/page/new">
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
@@ -15,10 +15,10 @@
 
 	<div class="row">
 		<p class="navbar-text pull-left">
-			<a href="../widget/widget-list.html" class="navbar-link">Blog Post</a>
+			<a href="#/user/:uid/website/:wid/page/:pid/widget" class="navbar-link">Blog Post</a>
 		</p>
 		<p class="navbar-text pull-right">
-			<a href="page-edit.html" class="navbar-link">
+			<a href="#/user/:uid/website/:wid/page/:pid" class="navbar-link">
 				<span class="glyphicon glyphicon-cog"></span>
 
 			</a>
@@ -28,10 +28,10 @@
 
 	<div class="row">
 		<p class="navbar-text pull-left">
-			<a href="../widget/widget-list.html" class="navbar-link">Blogs</a>
+			<a href="#/user/:uid/website/:wid/page/:pid/widget" class="navbar-link">Blogs</a>
 		</p>
 		<p class="navbar-text pull-right">
-			<a href="page-edit.html" class="navbar-link">
+			<a href="#/user/:uid/website/:wid/page/:pid" class="navbar-link">
 				<span class="glyphicon glyphicon-cog"></span>
 
 			</a>
@@ -41,10 +41,10 @@
 
 	<div class="row">
 		<p class="navbar-text pull-left">
-			<a href="../widget/widget-list.html" class="navbar-link">Home</a>
+			<a href="#/user/:uid/website/:wid/page/:pid/widget" class="navbar-link">Home</a>
 		</p>
 		<p class="navbar-text pull-right">
-			<a href="page-edit.html" class="navbar-link">
+			<a href="#/user/:uid/website/:wid/page/:pid" class="navbar-link">
 				<span class="glyphicon glyphicon-cog"></span>
 
 			</a>
@@ -54,10 +54,10 @@
 
 	<div class="row">
 		<p class="navbar-text pull-left">
-			<a href="../widget/widget-list.html" class="navbar-link">About</a>
+			<a href="#/user/:uid/website/:wid/page/:pid/widget" class="navbar-link">About</a>
 		</p>
 		<p class="navbar-text pull-right">
-			<a href="page-edit.html" class="navbar-link">
+			<a href="#/user/:uid/website/:wid/page/:pid" class="navbar-link">
 				<span class="glyphicon glyphicon-cog"></span>
 
 			</a>
@@ -67,10 +67,10 @@
 
 	<div class="row">
 		<p class="navbar-text pull-left">
-			<a href="../widget/widget-list.html" class="navbar-link">Contact Us</a>
+			<a href="#/user/:uid/website/:wid/page/:pid/widget" class="navbar-link">Contact Us</a>
 		</p>
 		<p class="navbar-text pull-right">
-			<a href="page-edit.html" class="navbar-link">
+			<a href="#/user/:uid/website/:wid/page/:pid" class="navbar-link">
 				<span class="glyphicon glyphicon-cog"></span>
 
 			</a>
@@ -80,7 +80,7 @@
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="../user/profile.html">
+			<a class="navbar-text pull-right" href="#/user/:uid">
 				<span class="glyphicon glyphicon-user"></span>
 			</a>
 		</div>
