--- a/public/assignment/views/user/login.view.client.html
+++ b/public/assignment/views/user/login.view.client.html
@@ -7,8 +7,8 @@
 			<input type="password" class="form-control" placeholder="password"/>
 			</div>
 			<div class="form-group">
-			<a href="profile.html" role="button" class="btn btn-primary form-control">Login</a> 
-			<a href="register.html" role="button" class="btn btn-danger form-control">Register</a> 
+			<a href="#/user/:uid" role="button" class="btn btn-primary form-control">Login</a>
+			<a href="#/register" role="button" class="btn btn-danger form-control">Register</a>
 			</div>
 		</form>
 	</div>
