--- a/public/assignment/views/widget/widget-image.view.client.html
+++ b/public/assignment/views/widget/widget-image.view.client.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<!--div class="container">
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
@@ -55,4 +55,4 @@
 	</nav>
 
 
-</div>
+</div-->
