initial angular app with login and register routes working

--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -9,7 +9,7 @@
 </nav>
 
 <div class="container-fluid">
-	<form action="login.html">
+	<form action="#/login">
 
 		<div class="form-group">
 			<label for="username">Username</label>
