--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -9,7 +9,7 @@
 </nav>
 
 <div class="container-fluid">
-	<form action="#/login">
+	<form>
 
 		<div class="form-group">
 			<label for="username">Username</label>
@@ -35,7 +35,7 @@
 		</div>
 
 		<div class="form-group">
-			<button type="submit" class="btn-danger form-control">Logout</button>
+			<a href="#/login" role="button" class="btn btn-danger form-control">Logout</a>
 		</div>
 
 	</form>
