--- a/public/assignment/views/user/register.view.client.html
+++ b/public/assignment/views/user/register.view.client.html
@@ -1,11 +1,11 @@
 
 	<div class="container">
 		<h1>Register</h1>
-		<form action="#/login">
+		<form>
 			<input type="text" class="form-control" placeholder="username"/>
 			<input type="password" class="form-control" placeholder="password"/>
 			<input type="password" class="form-control" placeholder="verify password"/>
-			<a href="/user/:uid" role="button" class="btn btn-primary form-control">Register</a>
-			<button type="submit" class="btn-danger form-control">Cancel</button>
+			<a href="#/user/:uid" role="button" class="btn btn-primary form-control">Register</a>
+			<a href="#/login" role="button" class="btn btn-danger form-control">Cancel</a>
 		</form>
 	</div>
