--- a/public/assignment/views/website/website-new.view.client.html
+++ b/public/assignment/views/website/website-new.view.client.html
@@ -98,12 +98,12 @@
 			<form>
 				<div class="form-group">
 					<label for="name">Name</label>
-					<input id="name" type="text" class="form-control" placeholder="Name"/>
+					<input id="name" type="text" class="form-control" ng-model="model.website.name" placeholder="Name"/>
 				</div>
 
 				<div class="form-group">
 					<label for="description">Description</label>
-					<textarea id="description" class="form-control" placeholder="Description"></textarea>
+					<textarea id="description" class="form-control" ng-model="model.website.description" placeholder="Description"></textarea>
 				</div>
 			</form>
 		</div>
@@ -113,12 +113,12 @@
 		<form>
 		<div class="form-group">
 			<label for="name">Name</label>
-			<input id="name" type="text" class="form-control" placeholder="Name"/>
+			<input id="name" type="text" class="form-control" ng-model="model.website.name" placeholder="Name"/>
 		</div>
 
 		<div class="form-group">
 			<label for="description">Description</label>
-			<textarea id="description" class="form-control" placeholder="Description"></textarea>
+			<textarea id="description" class="form-control" ng-model="model.website.description" placeholder="Description"></textarea>
 		</div>
 		</form>
 	</div>
