--- a/public/assignment/views/page/page-edit.view.client.html
+++ b/public/assignment/views/page/page-edit.view.client.html
@@ -15,12 +15,12 @@
 	<form>
 		<div class="form-group">
 			<label for="name">Name</label>
-			<input id="name" type="text" class="form-control" placeholder="Blog Post"/>
+			<input id="name" type="text" class="form-control" ngmodel="model.page.name" placeholder="Blog Post"/>
 		</div>
 
 		<div class="form-group">
 			<label for="title">Title</label>
-			<input id="title" type="text" class="form-control" placeholder="Page Title"/>
+			<input id="title" type="text" class="form-control" ngmodel="model.page.title" placeholder="Page Title"/>
 		</div>
 
 		<div class="form-group">
