--- a/public/assignment/views/user/login.view.client.html
+++ b/public/assignment/views/user/login.view.client.html
@@ -3,8 +3,9 @@
 		<h1>Login</h1>
 		<form>
 		<div class="form-group">
-			<input type="text" class="form-control" placeholder="username"/>
-			<input type="password" class="form-control" placeholder="password"/>
+			<input type="text" class="form-control" ng-model="model.user.username" placeholder="username"/>
+			<input type="password" class="form-control" ng-model="model.user.password" placeholder="password"/>
+
 			</div>
 			<div class="form-group">
 			<a href="#/user/:uid" role="button" class="btn btn-primary form-control">Login</a>
