--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -1,49 +1,53 @@
-
-<nav class="navbar navbar-default navbar-fixed-top">
-	<div class=" container-fluid">
-		<a class="navbar-brand">Profile</a>
-		<a class="navbar-text pull-right" href="#">
-			<span class="glyphicon glyphicon-ok white"></span>
-		</a>
-	</div>
-</nav>
-
-<div class="container-fluid">
-	<form>
-
-		<div class="form-group">
-			<label for="username">Username</label>
-			<input id="username" type="text" class="form-control" placeholder="username"/>
+<div class="container">
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class=" container-fluid">
+			<a class="navbar-brand">Profile</a>
+			<a class="navbar-text pull-right" href="#">
+				<span class="glyphicon glyphicon-ok white"></span>
+			</a>
 		</div>
-		<div class="form-group">
-			<label for="email">Email</label>
-			<input id="email" type="email" class="form-control" placeholder="username@gmail.com"/>
-		</div>
+	</nav>
 
-		<div class="form-group">
-			<label for="firstname">First Name</label>
-			<input id="firstname" type="text" class="form-control" placeholder="firstname"/>
-		</div>
-
-		<div class="form-group">
-			<label for="lastname">Last Name</label>
-			<input id="lastname" type="text" class="form-control" placeholder="lastname"/>
-		</div>
-
-		<div class="form-group">
-			<a href="#/user/:uid/website" role="button" class="btn btn-primary form-control">Websites</a>
-		</div>
-
-		<div class="form-group">
-			<a href="#/login" role="button" class="btn btn-danger form-control">Logout</a>
-		</div>
-
-	</form>
-</div>
-<nav class="navbar navbar-default navbar-fixed-bottom">
 	<div class="container-fluid">
-		<a class="navbar-text pull-right" href="#">
-			<span class="glyphicon glyphicon-user white"></span>
-		</a>
+		<form>
+
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input id="username" type="text" class="form-control" ng-model="model.user.username" placeholder="username"/>
+			</div>
+
+			<div class="form-group">
+				<label for="email">Email</label>
+				<input id="email" type="email" class="form-control" ng-model="model.user.email" placeholder="username@gmail.com"/>
+			</div>
+
+			<div class="form-group">
+				<label for="firstname">First Name</label>
+				<input id="firstname" type="text" class="form-control" ng-model="model.user.firstname" placeholder="firstname"/>
+			</div>
+
+			<div class="form-group">
+				<label for="lastname">Last Name</label>
+				<input id="lastname" type="text" class="form-control" ng-model="model.user.lastname" placeholder="lastname"/>
+			</div>
+
+			<div class="form-group">
+				<a href="#/user/:uid/website" role="button" class="btn btn-primary form-control">Websites</a>
+			</div>
+
+			<div class="form-group">
+				<a href="#/login" role="button" class="btn btn-danger form-control">Logout</a>
+			</div>
+
+		</form>
 	</div>
-</nav>
+
+
+	<nav class="navbar navbar-default navbar-fixed-bottom">
+		<div class="container-fluid">
+			<a class="navbar-text pull-right" href="#">
+				<span class="glyphicon glyphicon-user white"></span>
+			</a>
+		</div>
+	</nav>
+</div>
