--- a/public/assignment/views/user/register.view.client.html
+++ b/public/assignment/views/user/register.view.client.html
@@ -2,9 +2,9 @@
 	<div class="container">
 		<h1>Register</h1>
 		<form>
-			<input type="text" class="form-control" placeholder="username"/>
-			<input type="password" class="form-control" placeholder="password"/>
-			<input type="password" class="form-control" placeholder="verify password"/>
+			<input type="text" class="form-control" ng-model="model.user.username" placeholder="username"/>
+			<input type="password" class="form-control" ng-model="model.user.password" placeholder="password"/>
+			<input type="password" class="form-control" ng-model="model.user.verifypassword" placeholder="verify password"/>
 			<a href="#/user/:uid" role="button" class="btn btn-primary form-control">Register</a>
 			<a href="#/login" role="button" class="btn btn-danger form-control">Cancel</a>
 		</form>
