--- a/public/assignment/views/website/website-edit.view.client.html
+++ b/public/assignment/views/website/website-edit.view.client.html
@@ -98,12 +98,12 @@
 			<form>
 				<div class="form-group">
 					<label for="name">Website Name</label>
-					<input id="name" type="text" class="form-control" placeholder="Blogger"/>
+					<input id="name" type="text" class="form-control"ng-model="model.website.name"  placeholder="Blogger"/>
 				</div>
 
 				<div class="form-group">
 					<label for="description">Website Description</label>
-					<textarea id="description" class="form-control" placeholder="Description"></textarea>
+					<textarea id="description" class="form-control" ng-model="model.website.description" placeholder="Description"></textarea>
 				</div>
 
 				<div class="form-group">
@@ -117,12 +117,12 @@
 		<form>
 			<div class="form-group">
 				<label for="name">Website Name</label>
-				<input id="name" type="text" class="form-control" placeholder="Blogger"/>
+				<input id="name" type="text" class="form-control" ng-model="model.website.name" placeholder="Blogger"/>
 			</div>
 
 			<div class="form-group">
 				<label for="description">Website Description</label>
-				<textarea id="description" class="form-control" placeholder="Description"></textarea>
+				<textarea id="description" class="form-control" ng-model="model.website.description" placeholder="Description"></textarea>
 			</div>
 
 			<div class="form-group">
