--- a/public/assignment/views/widget/widget-list.view.client.html
+++ b/public/assignment/views/widget/widget-list.view.client.html
@@ -13,97 +13,10 @@
 		</div>
 	</nav>
 
-	<!--div class="row form">
+	<div ng-repeat="widget in model.widgets">
+		{{widget.name}}
 
-		<h1 class="navbar-text">GIZMODO</h1>
-		<p class="navbar-text pull-right">
-			<a href="widget-heading.html" class="navbar-link">
-				<span class="glyphicon glyphicon-cog"></span>
-			</a>
-			<a href="#" class="navbar-link">
-				<span class="glyphicon glyphicon-align-justify"></span>
-			</a>
-
-		</p>
 	</div>
-
-	<div class="row">
-		<h3 class="navbar-text">US Senate Reaches Compromise on Emergency Zika Funding</h3>
-		<p class="navbar-text pull-right">
-			<a href="widget-heading.html" class="navbar-link">
-				<span class="glyphicon glyphicon-cog"></span>
-			</a>
-			<a href="#" class="navbar-link">
-				<span class="glyphicon glyphicon-align-justify"></span>
-			</a>
-
-		</p>
-	</div>
-
-	<div class="row">
-		<image width = 80% height = 40px src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Aedes_Albopictus.jpg" class="navbar-text"></image>
-		<p class="navbar-text pull-right">
-			<a href="widget-image.html" class="navbar-link">
-				<span class="glyphicon glyphicon-cog"></span>
-			</a>
-			<a href="widget-image.html" class="navbar-link">
-				<span class="glyphicon glyphicon-align-justify"></span>
-			</a>
-
-		</p>
-	</div>
-	<div class="row">
-		<p class="navbar-text">some news article description about Zika and Emergency Zika Funding</p>
-		<p class="navbar-text pull-right">
-			<a href="widget-text-input.html" class="navbar-link">
-				<span class="glyphicon glyphicon-cog"></span>
-			</a>
-			<a href="" class="navbar-link">
-				<span class="glyphicon glyphicon-align-justify"></span>
-			</a>
-
-		</p>
-	</div>
-
-	<div class="row">
-		<h3 class="navbar-text">Man in WingSuit Flies Straight Through a Ring of Fire</h3>
-		<p class="navbar-text pull-right">
-			<a href="widget-heading.html" class="navbar-link">
-				<span class="glyphicon glyphicon-cog"></span>
-			</a>
-			<a href="#" class="navbar-link">
-				<span class="glyphicon glyphicon-align-justify"></span>
-			</a>
-
-		</p>
-	</div>
-
-	<div class="row">
-		<video width="640"  height="360" src="https://www.youtube.com/watch?v=uLWLashCXHE"  controls preload></video>
-		<p class="navbar-text pull-right">
-			<a href="widget-heading.html" class="navbar-link">
-				<span class="glyphicon glyphicon-cog"></span>
-			</a>
-			<a href="#" class="navbar-link">
-				<span class="glyphicon glyphicon-align-justify"></span>
-			</a>
-
-		</p>
-	</div>
-
-	<div class="row">
-		<p class="navbar-text">text about man in wingsuit flying through ring of fire</p>
-		<p class="navbar-text pull-right">
-			<a href="widget-text-input.html" class="navbar-link">
-				<span class="glyphicon glyphicon-cog"></span>
-			</a>
-			<a href="" class="navbar-link">
-				<span class="glyphicon glyphicon-align-justify"></span>
-			</a>
-
-		</p>
-	</div-->
-
 
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
