--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -23,12 +23,12 @@
 
 			<div class="form-group">
 				<label for="firstname">First Name</label>
-				<input id="firstname" type="text" class="form-control" ng-model="model.user.firstname" placeholder="firstname"/>
+				<input id="firstname" type="text" class="form-control" ng-model="model.user.firstName" placeholder="firstname"/>
 			</div>
 
 			<div class="form-group">
 				<label for="lastname">Last Name</label>
-				<input id="lastname" type="text" class="form-control" ng-model="model.user.lastname" placeholder="lastname"/>
+				<input id="lastname" type="text" class="form-control" ng-model="model.user.lastName" placeholder="lastname"/>
 			</div>
 
 			<div class="form-group">
