new user created successfuly using register with auto incrementing index

--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -32,7 +32,7 @@
 			</div>
 
 			<div class="form-group">
-				<a href="#/user/:uid/website" role="button" class="btn btn-primary form-control">Websites</a>
+				<a href="#/user/{{model.user._id}}/website" role="button" class="btn btn-primary form-control">Websites</a>
 			</div>
 
 			<div class="form-group">
