fixed register to profile username bug

--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -9,6 +9,7 @@
 	</nav>
 
 	<div class="container-fluid">
+		<div ng-show="model.error" class="alert alert-danger">{{model.error}}</div>
 		<form>
 
 			<div class="form-group">
