fixed edit website with auto populate values

--- a/public/assignment/views/website/website-edit.view.client.html
+++ b/public/assignment/views/website/website-edit.view.client.html
@@ -14,7 +14,7 @@
 					</a>
 				</div>
 				<div class="col-sm-8 no-padding-right">
-					<a href="#" class="navbar-brand">New Website</a>
+					<a href="#" class="navbar-brand">Edit Website</a>
 					<a class="navbar-text pull-right" href="#/user/:uid/website">
 						<span class="glyphicon glyphicon-ok"></span>
 					</a>
@@ -25,7 +25,6 @@
 				<a href="#/user/:uid" class="navbar-text pull-left">
 					<span class="glyphicon glyphicon-chevron-left"></span>
 				</a>
-				<a href="#" class="navbar-brand">New Website</a>
 				<a class="navbar-text pull-right" href="#/user/:uid/website">
 					<span class="glyphicon glyphicon-ok"></span>
 				</a>
@@ -40,59 +39,14 @@
 	<div class="hidden-xs">
 		<vr></vr>
 		<div class="col-sm-4">
-			<div class="row">
-				<p class="navbar-text pull-left">
-					<a href="#/user/:uid/website/:wid/page" class="navbar-link">Address Book App</a>
-				</p>
-				<p class="navbar-text pull-right">
-					<a href="#/user/:uid/website/:wid" class="navbar-link">
+			<ul class="list-group">
+				<li ng-repeat="website in model.websites" class="list-group-item">
+					<a href="#/user/{{model.uid}}/website/{{website._id}}/page">{{website.name}}</a>
+					<a class="pull-right" href="#/user/{{model.uid}}/website/{{website._id}}">
 						<span class="glyphicon glyphicon-cog"></span>
-
 					</a>
-				</p>
-
-			</div>
-
-			<div class="row">
-				<p class="navbar-text pull-left">
-					<a href="#/user/:uid/website/:wid/page" class="navbar-link">Blogger</a>
-				</p>
-				<p class="navbar-text pull-right">
-					<a href="#/user/:uid/website/:wid" class="navbar-link">
-						<span class="glyphicon glyphicon-cog"></span>
-
-					</a>
-				</p>
-
-			</div>
-
-			<div class="row">
-
-				<p class="navbar-text pull-left">
-					<a href="#/user/:uid/website/:wid/page" class="navbar-link">Blogglog App</a>
-				</p>
-				<p class="navbar-text pull-right">
-					<a href="#/user/:uid/website/:wid" class="navbar-link">
-						<span class="glyphicon glyphicon-cog"></span>
-
-					</a>
-				</p>
-
-			</div>
-
-			<div class="row">
-				<p class="navbar-text pull-left">
-					<a href="#/user/:uid/website/:wid/page" class="navbar-link">Script Testing App</a>
-				</p>
-				<p class="navbar-text pull-right">
-					<a href="#/user/:uid/website/:wid" class="navbar-link">
-						<span class="glyphicon glyphicon-cog"></span>
-
-					</a>
-				</p>
-
-			</div>
-
+				</li>
+			</ul>
 		</div>
 		<div class="col-sm-8">
 			<form>
