--- a/public/assignment/views/website/website-edit.view.client.html
+++ b/public/assignment/views/website/website-edit.view.client.html
@@ -80,7 +80,7 @@
 			</div>
 
 			<div class="form-group">
-				<a href="#/user/:uid/website" role="button" class="btn btn-danger form-control">Delete</a>
+				<a ng-click="model.deleteWebsite(model.website._id)" role="button" class="btn btn-danger form-control">Delete</a>
 			</div>
 		</form>
 	</div>
