--- a/public/assignment/views/page/page-list.view.client.html
+++ b/public/assignment/views/page/page-list.view.client.html
@@ -3,11 +3,11 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
-			<a href="#/user/:uid/website" class="navbar-text pull-left">
+			<a href="#/user/{{model.uid}}/website" class="navbar-text pull-left">
 				<span class="glyphicon glyphicon-chevron-left"></span>
 			</a>
 			<a href="#" class="navbar-brand">Pages</a>
-			<a class="navbar-text pull-right" href="#/user/:uid/website/:wid/page/new">
+			<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website/{{model.wid}}/page/new">
 				<span class="glyphicon glyphicon-ok"></span>
 			</a>
 		</div>
@@ -21,7 +21,7 @@
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="#/user/:uid">
+			<a class="navbar-text pull-right" href="#/user/{{model.uid}}">
 				<span class="glyphicon glyphicon-user"></span>
 			</a>
 		</div>
