--- a/public/assignment/views/website/website-edit.view.client.html
+++ b/public/assignment/views/website/website-edit.view.client.html
@@ -5,27 +5,27 @@
 		<div class=" container-fluid">
 			<div class="hidden-xs">  <!-- Not visible on extra small screens-->
 				<div class="col-sm-4 left-full">
-					<a href="#/user/:uid" class="navbar-text">
+					<a href="#/user/{{model.uid}}" class="navbar-text">
 						<span class="glyphicon glyphicon-chevron-left"></span>
 					</a>
 					<a href="#" class="navbar-brand">Websites</a>
-					<a class="navbar-text pull-right" href="#/user/:uid/website/new">
+					<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website/new">
 						<span class="glyphicon glyphicon-plus"></span>
 					</a>
 				</div>
 				<div class="col-sm-8 no-padding-right">
 					<a href="#" class="navbar-brand">Edit Website</a>
-					<a class="navbar-text pull-right" href="#/user/:uid/website">
+					<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website">
 						<span class="glyphicon glyphicon-ok"></span>
 					</a>
 				</div>
 			</div>
 
 			<div class="visible-xs"> <!-- Visible only on extra small screens-->
-				<a href="#/user/:uid" class="navbar-text pull-left">
+				<a href="#/user/{{model.uid}}" class="navbar-text pull-left">
 					<span class="glyphicon glyphicon-chevron-left"></span>
 				</a>
-				<a class="navbar-text pull-right" href="#/user/:uid/website">
+				<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website">
 					<span class="glyphicon glyphicon-ok"></span>
 				</a>
 			</div>
@@ -61,7 +61,7 @@
 				</div>
 
 				<div class="form-group">
-					<a href="#/user/:uid/website" role="button" class="btn btn-danger form-control">Delete</a>
+					<a href="#/user/{{model.uid}}/website" role="button" class="btn btn-danger form-control">Delete</a>
 				</div>
 			</form>
 		</div>
@@ -70,13 +70,13 @@
 	<div class="visible-xs">
 		<form>
 			<div class="form-group">
-				<label for="name">Website Name</label>
-				<input id="name" type="text" class="form-control" ng-model="model.website.name" placeholder="Blogger"/>
+				<label for="name1">Website Name</label>
+				<input id="name1" type="text" class="form-control" ng-model="model.website.name" placeholder="Blogger"/>
 			</div>
 
 			<div class="form-group">
-				<label for="description">Website Description</label>
-				<textarea id="description" class="form-control" ng-model="model.website.description" placeholder="Description"></textarea>
+				<label for="description1">Website Description</label>
+				<textarea id="description1" class="form-control" ng-model="model.website.description" placeholder="Description"></textarea>
 			</div>
 
 			<div class="form-group">
@@ -89,7 +89,7 @@
 
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="#/user/:uid">
+			<a class="navbar-text pull-right" href="#/user/{{model.uid}}">
 				<span class="glyphicon glyphicon-user"></span>
 			</a>
 		</div>
