--- a/public/assignment/views/website/website-list.view.client.html
+++ b/public/assignment/views/website/website-list.view.client.html
@@ -3,8 +3,8 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class=" container-fluid">
-			<a href="#" class="navbar-brand">Websites</a>
-			<a class="navbar-text pull-right" href="#/user/:uid/website/new">
+			<a href="#/user/{{model.uid}}/website" class="navbar-brand">Websites</a>
+			<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website/new">
 				<span class="glyphicon glyphicon-plus"></span>
 			</a>
 		</div>
